--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,5 +68,12 @@ dependencies {
     //nav
     implementation "androidx.navigation:navigation-compose:2.4.0-alpha06"
 
+    //View-pager
+    implementation "com.google.accompanist:accompanist-pager:0.23.1"
+    implementation "com.google.accompanist:accompanist-pager-indicators:0.23.1"
+
+    //implementation "com.google.accompanist:accompanist-pager:0.22.0-rc"
+
+
 
 }
